--- a/.env
+++ b/.env
@@ -9,11 +9,10 @@ NODE_ID=1
 
 # MongoDB
 DB_USER="go_api_user"
-DB_PASS="Da08Cse#@!!@#"
+DB_PASS=""
 DB_HOST="localhost:27017"
 DB_NAME=tinyurls
 DB_AUTH_SOURCE=admin
-# DB_URL="mongodb://go_api_user:Da08Cse#@!!@#@localhost:27017/tinyurls?authSource=admin"
 
 # Feistel obfuscation
 # FEISTEL_KEY must fit in uint32 (0 → 4294967295)
