--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ REDIS_ADDR=localhost:6379
 NODE_ID=1
 
 # MongoDB
-DB_USER="go_api_user"
+DB_USER=""
 DB_PASS=""
 DB_HOST="localhost:27017"
 DB_NAME=tinyurls
